@@ -1,4 +1,15 @@
 
+Changes with lua-resty-session 1.1                                3 Oct 2014
+
+    *) Security: There was a bug where additional user agent, scheme, and
+       remote addr (disabled by default) was not checked.
+
+    *) Feature: Added _VERSION field.
+
+    *) Change: Simplied a code a lot (e.g. internal setcookie and getcookie
+       functions are now cleaner). Removed a lot of unneccessary lines from
+       session.start by adding configs directly to session prototype.
+
 Changes with lua-resty-session 1.0                               24 Sep 2014
 
     *) Feature: LuaRocks Support via MoonRocks.
